<resources>
    <string name="background">Background</string>
    <string name="app_name">OneSight</string>
    <string name="connexion_button">Connexion</string>
    <string name="connexion_with_fb_button">Connexion avec Facebook</string>
    <string name="register_button">Créer un compte</string>
    <string name="enter_informations">Se connecter</string>
    <string name="show_informations">Mon profil</string>
    <string name="edit_informations">Modifier le profil</string>
    <string name="delete">Supprimer le compte</string>
    <string name="edit_account">Modifier le compte</string>
    <string name="name">Nom</string>
    <string name="surname">Prénom</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="oldpassword">Veuillez entrer votre mot de passe</string>
    <string name="newpassword">Nouveau mot de passe</string>
    <string name="next">Suivant</string>
    <string name="validate">Valider</string>
    <string name="i_am">Je suis &#8230;</string>
    <string name="i_look_for">Je cherche &#8230;</string>
    <string name="man">Un homme</string>
    <string name="woman">Une femme</string>
    <string name="both">Les deux</string>
    <string name="pick_date">Donnez votre date de naissance</string>
    <string name="unable_app">Désactivez l\'application</string>
    <string name="account_params">Paramètres du compte</string>
    <string name="profile_params">Paramètres du profil</string>
    <string name="sign_out">Sign Out</string>
    <string name="permission_camera_rationale">La permission de prendre une photo est nécessaire pour éditer une photo de profil.</string>
    <string name="permission_storage_rationale">La permission de lire et écrire sur la carte SD est nécessaire pour choisir une photo de profil.</string>
    <string name="ok">D\'accord</string>
    <string name="permision_available_storage">La permission de lire la carte SD a été accordée.</string>
    <string name="permision_available_camera">La permission de prendre une photo a été accordée.</string>
    <string name="permissions_not_granted">La permission n\'a pas été accordée.</string>
    <string name="password_prompt">Entrez votre mot de passe</string>
    <string name="camera">Appareil photo</string>
    <string name="gallery">Galerie d\'images</string>
    <string name="dialog_alert_message">Votre compte sera supprimé définitivement.</string>
    <string name="dialog_alert_title">Suppression du compte</string>
    <string name="cancel">Annuler</string>
    <string name="warning">Attention</string>
    <string name="settings_change_unavailable">Il semblerait que votre appareil ne soit pas capable d\'obtenir une géolocalisation suffisament précise. L\'application risque de ne pas fonctionner correctement. Essayez si possible d'activer la localisation la plus précise possible dans vos paramètres.</string>
    <string name="start_geoloc">Activer l\'application</string>
    <string name="stop_geoloc">Désactiver l\'application</string>
    <string name="facebook_app_id">1295442273900934</string>
    <string name="fb_login_protocol_scheme">fb1295442273900934</string>
    <string name="match_picture">Photo de la personne a rencontrer</string>
    <string name="accept_button">Accepter</string>
    <string name="refuse_button">Refuser</string>
    <string name="unknown">Inconnu</string>
    <string name="required">Champ requis ou invalide.</string>
    <string name="please_fill">Veuillez remplir tous les champs demandés.</string>
    <string name="auth_failed">L\'authentification a échoué.</string>
    <string name="birth_date">Votre date de naissance : </string>
    <string name="error_occurred">Une erreur est survenue.</string>
    <string name="new_user">Nouvel utilisateur créé : </string>
    <string name="wrong_credentials">Mot de passe incorrect.</string>
    <string name="info_updated">Les informations ont été mises à jour.</string>
    <string name="new_meeting">Une nouvelle rencontre ?</string>
    <string name="interested">Une personne est proche de vous ! Êtes-vous interessé(e) ?</string>
    <string name="itsamatch">C\'est un match !</string>
    <string name="match">Vous avez matché, allez à sa rencontre !</string>
</resources>
