<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="com.onesight.uqac.onesight.controller.FirstScreenActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/night_background_opacity80"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        tools:context="com.onesight.uqac.onesight_demo.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="80sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:fontFamily="cursive"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/onesight"
            />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/connexion_button"
            android:textColor="@android:color/black" />

        <!--<Button
            android:id="@+id/connect_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorPrimary"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/connexion_with_fb_button"
            android:textColor="@android:color/white" />-->


        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/connexion_button"/>


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/register_button"
            android:textColor="@android:color/black" />
    </LinearLayout>
</RelativeLayout>
